# fastapi_docker_kubernetes

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  requirements.txt
src/app/: main.py
src/app/api/: ping.py
src/tests/: conftest.py  test_main.py
