[project]
name = "fastapi-docker-kubernetes"
version = "0.1.0"
description = ""
authors = [
    {name = "Szymon Iwaniuk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.118.0)",
    "uvicorn (==0.37.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
