[project]
name = "fastapi-docker-kubernetes"
version = "0.1.0"
description = ""
authors = [
    {name = "Szymon Iwaniuk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.118.0)",
    "uvicorn (==0.37.0)",
    "asyncpg (>=0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
go-task-bin = "^3.43.3"
httpx = "^0.27.0"

[tool.pytest.ini_options]
testpaths = [
    "src/tests/"
]

pythonpath = [
    "src/app"
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E401"]
exclude = [".venv"]
per-file-ingores = ["__init__.py"]

[tool.black]
line-length = 120
